--- a/Seminar_04/Homework/src/main/resources/templates/info_tmpl.html
+++ b/Seminar_04/Homework/src/main/resources/templates/info_tmpl.html
@@ -5,14 +5,14 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">IP addres</th>
+                <th scope="col">IP address</th>
                 <th scope="col">Hostname</th>
                 <th scope="col">Model</th>
                 <th scope="col">Vendor</th>
             </tr>
             </thead>
             <tbody>
-            <tr>
+            <tr th:each="switch: ${switches}">
                 <td th:text="${switch.getIpAddress}">172.16.0.1</td>
                 <td th:text="${switch.getHostname}">MP-DC-SW-R1-01</td>
                 <td th:text="${switch.getModel}">WS-C2960X-48FPD-L</td>
@@ -21,18 +21,22 @@
             </tbody>
         </table>
         <div class="d-flex flex-column p-3 text-bg-light w-auto">
-            <form>
+            <form action="/addswitch" method="post">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">IP address</label>
-                    <input type="IPAddress" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="ipAddress" class="form-label">IP address</label>
+                    <input type="text" class="form-control" id="ipAddress" name="ipAddress">
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="hostname" class="form-label">Hostname</label>
+                    <input type="text" class="form-control" id="hostname" name="hostname">
                 </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                <div class="mb-3">
+                    <label for="model" class="form-label">Model</label>
+                    <input type="text" class="form-control" id="model" name="model">
+                </div>
+                <div class="mb-3">
+                    <label for="Vendor" class="form-label">Vendor</label>
+                    <input type="text" class="form-control" id="Vendor" name="vendor">
                 </div>
                 <button type="submit" class="btn btn-primary">Add</button>
             </form>
