--- a/Seminar_06/MyRickAndMortyAPI/src/main/resources/templates/characters_tmpl.html
+++ b/Seminar_06/MyRickAndMortyAPI/src/main/resources/templates/characters_tmpl.html
@@ -6,7 +6,8 @@
     <div class="d-flex flex-wrap">
         <div class="d-flex flex-column" style="height: 400px;" th:each="character : ${characters}">
             <p th:text="${character.getId}">Rick Sanchez</p>
-            <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Rick Sanchez" style=" height: 90%;">
+            <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Rick Sanchez" style=" height: 90%;"
+                 th:attr="src=${character.getImage}, alt=${character.getName}">
         </div>
     </div>
     <nav aria-label="Page navigation example">
@@ -20,14 +21,22 @@
     <h2>Информация о персонаже сериала Rick and Morty</h2>
     <div class="d-flex flex-wrap">
         <div class="d-flex flex-column" style="height: 600px;">
-            <h3 >Name: <span th:text="${character.getName}"></span></h3>
+            <h3>Name: <span th:text="${character.getName}"></span></h3>
             <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Rick Sanchez" style=" height: 90%;"
                  th:attr="src=${character.getImage}, alt=${character.getName}">
-            <h3 >Status: <span th:text="${character.getStatus}"></span></h3>
-            <h3 >Species: <span th:text="${character.getSpecies}"></span></h3>
-            <h3 >Type: <span th:text="${character.getType}"></span></h3>
-            <h3 >Gender: <span th:text="${character.getGender}"></span></h3>
         </div>
+        <div class="d-flex flex-column">
+            <h3>Status: <span th:text="${character.getStatus}"></span></h3>
+            <h3>Species: <span th:text="${character.getSpecies}"></span></h3>
+            <h3>Type: <span th:text="${character.getType}"></span></h3>
+            <h3>Gender: <span th:text="${character.getGender}"></span></h3>
+            <h3>Location Origin: <span th:text="${character.getOrigin.getName}"></span></h3>
+            <h3>Location Current: <span th:text="${character.getLocation.getName}"></span></h3>
+            <h3>Episodes: <span th:text="${character.getEpisodes.getName}"></span></h3>
+            <h3>URL: <span th:text="${character.getUrl}"></span></h3>
+            <h3>Creater: <span th:text="${character.getCreated}"></span></h3>
+        </div>
+
     </div>
 </div>
 </body>
