Change Homework Rick and Morty

--- a/Seminar_06/MyRickAndMortyAPI/src/main/resources/templates/characters_tmpl.html
+++ b/Seminar_06/MyRickAndMortyAPI/src/main/resources/templates/characters_tmpl.html
@@ -5,15 +5,16 @@
     <h2>Персонажи сериала Rick and Morty</h2>
     <div class="d-flex flex-wrap">
         <div class="d-flex flex-column" style="height: 400px;" th:each="character : ${characters}">
-            <p th:text="${character.getId}">Rick Sanchez</p>
-            <img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Rick Sanchez" style=" height: 90%;"
+            <h3 th:text="${character.getName}">Rick Sanchez</h3>
+            <a th:href = "@{/characters/{id}(id=${character.getId})}"><img src="https://rickandmortyapi.com/api/character/avatar/1.jpeg" alt="Rick Sanchez" style=" height: 90%;"
                  th:attr="src=${character.getImage}, alt=${character.getName}">
+            </a>
         </div>
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <li class="page-item"><a class="page-link" href="#" th:href="@{/characters/previous}" >Previous</a></li>
+            <li class="page-item"><a class="page-link" href="#" th:href="@{/characters/next}">Next</a></li>
         </ul>
     </nav>
 </div>
@@ -32,7 +33,7 @@
             <h3>Gender: <span th:text="${character.getGender}"></span></h3>
             <h3>Location Origin: <span th:text="${character.getOrigin.getName}"></span></h3>
             <h3>Location Current: <span th:text="${character.getLocation.getName}"></span></h3>
-            <h3>Episodes: <span th:text="${character.getEpisodes.getName}"></span></h3>
+            <h3>Episodes: <span th:text="${character.showEpisodes}"></span></h3>
             <h3>URL: <span th:text="${character.getUrl}"></span></h3>
             <h3>Creater: <span th:text="${character.getCreated}"></span></h3>
         </div>
